--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -10,6 +10,6 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: install dependencies
-      run: apt install libncurses5-dev libncursesw5-dev
+      run: sudo apt install libncurses5-dev libncursesw5-dev
     - name: make
       run: make
